ADICIONAR OS PLACEHOLDERS

--- a/index.html
+++ b/index.html
@@ -19,26 +19,26 @@
 
         <article>
             <h3>Subtítulo</h3>
-            <p></p>
-            <p></p>
-            <p></p>
-            <img src="" alt="">
-            <p></p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo animi, omnis dolorem in tempore commodi corrupti et tenetur odit ipsum quidem doloribus temporibus soluta voluptatibus unde fugit obcaecati iusto est!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam porro minima aliquam facere qui hic quod fugiat ullam sint labore explicabo vel ratione provident, nulla at placeat odio eum quaerat.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo consectetur tempore minima aperiam fugit magni nostrum eius a provident dolore alias corporis iste quisquam, porro fuga mollitia laudantium ea harum?</p>
+            <img src="https://placekitten.com/300/200" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid voluptates inventore, aliquam ex obcaecati temporibus! Modi tenetur, mollitia quod praesentium reiciendis, aperiam accusantium laborum maxime alias numquam sapiente quisquam perferendis.</p>
 
             <ol>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="http://facebook.com">Facebook</a></li>
+                <li><a href="http://mastertech.com">Mastertech</a></li>
+                <li><a href="http://instagram.com">Instagram</a></li>
             </ol>
         </article>
     </section>
 
     <footer>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>4</button>
+        <button>5</button>
     </footer>
 
 </body>
