--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
         <article>
             <h3>Subtítulo</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo animi, omnis dolorem in tempore commodi corrupti et tenetur odit ipsum quidem doloribus temporibus soluta voluptatibus unde fugit obcaecati iusto est!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam porro minima aliquam facere qui hic quod fugiat ullam sint labore explicabo vel ratione provident, nulla at placeat odio eum quaerat.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo consectetur tempore minima aperiam fugit magni nostrum eius a provident dolore alias corporis iste quisquam, porro fuga mollitia laudantium ea harum?</p>
-            <img src="https://placekitten.com/300/200" alt="">
+            <p id="primeiro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo animi, omnis dolorem in tempore commodi corrupti et tenetur odit ipsum quidem doloribus temporibus soluta voluptatibus unde fugit obcaecati iusto est!</p>
+            <p abobrinha="menor">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam porro minima aliquam facere qui hic quod fugiat ullam sint labore explicabo vel ratione provident, nulla at placeat odio eum quaerat.</p>
+            <p class="azul">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo consectetur tempore minima aperiam fugit magni nostrum eius a provident dolore alias corporis iste quisquam, porro fuga mollitia laudantium ea harum?</p>
+            <img src="https://placekitten.com/300/200" alt="gatinho">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid voluptates inventore, aliquam ex obcaecati temporibus! Modi tenetur, mollitia quod praesentium reiciendis, aperiam accusantium laborum maxime alias numquam sapiente quisquam perferendis.</p>
 
             <ol>
@@ -34,11 +34,11 @@
     </section>
 
     <footer>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>4</button>
-        <button>5</button>
+        <button class="final">1</button>
+        <button class="final">2</button>
+        <button class="final">3</button>
+        <button class="final">4</button>
+        <button class="final">5</button>
     </footer>
 
 </body>
